DIRECTV: update grid order (Projection first), group Melrose prints as Key/Variant side-by-side, add RT HPTO image, rewrite highlights (Timing/Channels), contribution copy, swap card image to logo; improve MOV playback with poster/playsinline; verify Sephora skincare tab exists

--- a/index.html
+++ b/index.html
@@ -5733,7 +5733,7 @@
                     <!-- DIRECTV Draft Card -->
                     <a href="#directv" class="brand-card card hover-lift directv">
                         <div class="brand-image-container img-hover-zoom">
-                            <img src="https://images-cdn2.welcomesoftware.com/assets/Nothing+On+Your+Roof-DIRECTV.jpg/Zz0yOGU0ZmEwMjIyMTQxMWYwYWVlYWYyODRlZjQ4Mzc5OQ==?width=678&height=380" alt="DIRECTV Nothing On Your Roof 2.0 MLB Campaign" class="brand-image" loading="lazy">
+                            <img src="Brand Imagery/Directv/directv-rebranding-bringing-flexibility-2025.webp" alt="DIRECTV" class="brand-image" loading="lazy">
                             <div class="brand-overlay"></div>
                         </div>
                         <h3 class="brand-title card-title text-center mt-sm p-sm">DIRECTV</h3>
@@ -6426,35 +6426,42 @@
                                     <div class="section-divider"></div>
                                 </div>
                                 <p class="cs-paragraph">A real‑time out‑of‑home hijack during the Emmys, engineered to intercept cultural attention at peak moment. Built fast with a newsroom mindset: listen, concept, deploy — within hours. Creative aligned to DIRECTV’s streaming transformation narrative and sports leadership while tapping into awards‑night buzz.</p>
-                                <p class="cs-paragraph">Rolled across high‑impact digital OOH near venues and entertainment corridors, complemented by paid social that mirrored the creative within minutes. The takeaway: meet the moment, move the conversation, and point to a product truth.</p>
+                                <p class="cs-paragraph">I contributed to the connections strategy and real‑time orchestration — mapping high‑impact placements, coordinating projection timing, and aligning paid/organic social with our OOH creative. We also executed a Rotten Tomatoes homepage takeover to extend the moment digitally and drive curiosity off‑platform.</p>
+                                <p class="cs-paragraph">Rolled across print OOH, digital OOH, and social — with content captured and published in‑flight. The takeaway: meet the moment, move the conversation, and point to a product truth.</p>
                             </div>
                             <div class="campaign-highlights cs-section">
                                 <div class="highlight-grid">
                                     <div class="highlight-card"><h5>Objective</h5><p>Culture hijack to boost consideration in real time</p></div>
-                                    <div class="highlight-card"><h5>Timing</h5><p>Live during the Emmys broadcast window</p></div>
-                                    <div class="highlight-card"><h5>Distribution</h5><p>Digital OOH, Paid Social, Influencers</p></div>
-                                    <div class="highlight-card"><h5>Role</h5><p>Connections Strategy, Real‑time Orchestration</p></div>
+                                    <div class="highlight-card"><h5>Timing</h5><p>Live during Emmys night and the following days</p></div>
+                                    <div class="highlight-card"><h5>Channels</h5><p>Print OOH, Digital OOH, Digital, Organic Social</p></div>
                                 </div>
                             </div>
                             <div class="photo-gallery-cs grid col-1 cs-section">
-                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" data-title="Emmys OOH — Key Visual" data-caption="Primary creative near awards corridor.">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" alt="DIRECTV Emmys OOH Key Visual" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Key Visual</h5><p>High‑impact placement during the broadcast window.</p></div>
+                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions.">
+                                    <img src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" alt="DIRECTV Rotten Tomatoes Homepage Takeover" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Digital — Rotten Tomatoes HPTO</h5><p>1.6M+ impressions and strong CTRs.</p></div>
                                 </div>
-                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Emmys OOH — Variant" data-caption="Alternate cut tailored for social cross‑posting.">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Variant</h5><p>Format‑fit creative for secondary sites.</p></div>
+                                <div class="grid col-2" style="gap:16px;">
+                                    <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" data-title="Print OOH — Key Visual" data-caption="Melrose placement hero.">
+                                        <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" alt="DIRECTV Emmys OOH Melrose Key Visual" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Print OOH — Key Visual</h5><p>Melrose placement during broadcast window.</p></div>
+                                    </div>
+                                    <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana.">
+                                        <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
+                                    </div>
                                 </div>
-                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Emmys OOH — Street View" data-caption="On‑street capture during the activation.">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" alt="DIRECTV Emmys OOH Street View" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Street View</h5><p>Real‑world context from Melrose / The Americana.</p></div>
+                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night.">
+                                    <img src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" alt="DIRECTV Emmys Projection" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Digital OOH — Projection</h5><p>High‑scale moment capture.</p></div>
                                 </div>
                             </div>
                             <div class="video-gallery grid col-1 cs-section">
                                 <div class="video-card">
                                     <div class="video-container">
-                                        <video controls preload="metadata" style="width:100%;border-radius:12px;">
+                                        <video controls playsinline muted preload="metadata" style="width:100%;border-radius:12px;" poster="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg">
                                             <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV" type="video/quicktime">
+                                            <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV#t=0.1" type="video/mp4">
                                         </video>
                                     </div>
                                     <div class="video-caption">Emmys OOH Hijack — Recap Reel</div>
