Samuel Adams: replace non-playing Vimeo embeds with single YouTube link provided

--- a/index.html
+++ b/index.html
@@ -6271,9 +6271,13 @@
             <div class="case-study-content">
                 <div class="case-study-container">
                     <p class="cs-paragraph">In the "Your Cousin's Brighter Boston" campaign for Samuel Adams, I helped bring a fresh perspective to the iconic Boston beer brand at Goodby, Silverstein & Partners. As a lifelong Celtics fan, I pitched partnering with NBA legend Kevin Garnett, whose energy perfectly embodied Boston's spirit. Directed by Aaron Stoller, the campaign infused visuals with a bold, cinematic flair, celebrating Boston's heritage and community. Launched during Super Bowl LVII in 2023, the spot aired in 15 markets and was supported by a robust media plan across TV, digital, and OOH.</p>
-                    <div class="video-gallery grid col-2 cs-section">
-                        <div class="video-card"><div class="video-container"><iframe src="https://player.vimeo.com/video/796397708?h=c9bb0fc3ae" title="Samuel Adams Brighter Boston Campaign Video (30s)" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><div class="video-caption">Your Cousin's Brighter Boston (30s)</div></div>
-                        <div class="video-card"><div class="video-container"><iframe src="https://player.vimeo.com/video/796397708?h=c9bb0fc3ae&amp;byline=0&amp;portrait=0#t=15s" title="Samuel Adams Brighter Boston Campaign Video (15s)" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><div class="video-caption">Your Cousin's Brighter Boston (15s)</div></div>
+                    <div class="video-gallery grid col-1 cs-section">
+                        <div class="video-card">
+                            <div class="video-container">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/sw7FyFix434" title="Samuel Adams — Your Cousin's Brighter Boston" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                            <div class="video-caption">Your Cousin's Brighter Boston — Official Spot</div>
+                        </div>
                     </div>
                     <div class="photo-gallery-cs grid col-3 cs-section">
                         <div class="photo-card-cs gallery-item" data-src="https://goodbysilverstein.com/public/upload/work/images/desktop/63e1579848ae6.jpg" data-title="Cinematic Boston" data-caption="A cinematic moment from Your Cousin's Brighter Boston.">
