--- a/index.html
+++ b/index.html
@@ -5522,16 +5522,16 @@
                     <h3 class="mt-md mb-sm">Skills & Expertise</h3>
                     <div class="ticker" style="position:relative;overflow:hidden;border-top:1px solid rgba(255,255,255,.08);border-bottom:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.2);border-radius:8px;">
                         <div class="ticker-track" style="display:flex;gap:32px;white-space:nowrap;animation: tickerMove 27s linear infinite;padding:10px 0;">
-                            <div class="tick"><span style="color:#7CFC00;">STRAT PLAN ▲</span> Strategic Planning  +2.1%</div>
-                            <div class="tick"><span style="color:#7CFC00;">STORYTELL ▲</span> Storytelling  +1.4%</div>
-                            <div class="tick"><span style="color:#7CFC00;">AI MKTG ▲</span> AI Marketing  +3.2%</div>
-                            <div class="tick"><span style="color:#FF6B6B;">MEDIA PLAN ▼</span> Media Planning  -0.4%</div>
-                            <div class="tick"><span style="color:#7CFC00;">CULT INSIGHT ▲</span> Cultural Insight  +1.1%</div>
-                            <div class="tick"><span style="color:#7CFC00;">EMERG TECH ▲</span> Emerging Tech  +2.7%</div>
-                            <div class="tick"><span style="color:#7CFC00;">CONTENT STRAT ▲</span> Content Strategy  +0.9%</div>
+                            <div class="tick"><span style="color:#7CFC00;">STRAT ▲</span> Strategic Planning  +2.1%</div>
+                            <div class="tick"><span style="color:#7CFC00;">STORY ▲</span> Storytelling  +1.4%</div>
+                            <div class="tick"><span style="color:#7CFC00;">AIMKT ▲</span> AI Marketing  +3.2%</div>
+                            <div class="tick"><span style="color:#FF6B6B;">MEDIA ▼</span> Media Planning  -0.4%</div>
+                            <div class="tick"><span style="color:#7CFC00;">CULTR ▲</span> Cultural Insight  +1.1%</div>
+                            <div class="tick"><span style="color:#7CFC00;">EMTEC ▲</span> Emerging Tech  +2.7%</div>
+                            <div class="tick"><span style="color:#7CFC00;">CNTNT ▲</span> Content Strategy  +0.9%</div>
                             <div class="tick"><span style="color:#7CFC00;">PHOTO ▲</span> Photography  +1.0%</div>
-                            <div class="tick"><span style="color:#7CFC00;">MEASURE ▲</span> Measurement  +1.6%</div>
-                            <div class="tick"><span style="color:#7CFC00;">BRAND DEV ▲</span> Brand Development  +1.2%</div>
+                            <div class="tick"><span style="color:#7CFC00;">MEASR ▲</span> Measurement  +1.6%</div>
+                            <div class="tick"><span style="color:#7CFC00;">BRAND ▲</span> Brand Development  +1.2%</div>
                             </div>
                             </div>
                             </div>
@@ -5549,8 +5549,10 @@
                                 </radialGradient>
                             </defs>
                             <rect x="0" y="0" width="960" height="600" fill="url(#bgGlow)"/>
+                            <!-- High-contrast US outline plate -->
+                            <rect x="20" y="40" width="920" height="520" rx="18" fill="#0f0f0f" stroke="#2e2e2e" stroke-width="2"/>
                             <!-- Simplified US map silhouette made of state-like blocks (visible) -->
-                            <g id="usBlocks" fill="#171717" stroke="#2a2a2a" stroke-width="1.2" opacity="0.9">
+                            <g id="usBlocks" fill="#222" stroke="#3a3a3a" stroke-width="1.2" opacity="1">
                                 <!-- West -->
                                 <rect x="60" y="120" width="110" height="80" rx="6"/>
                                 <rect x="175" y="120" width="110" height="80" rx="6"/>
@@ -5571,7 +5573,7 @@
                                 <rect x="820" y="225" width="70" height="60" rx="6"/>
                             </g>
                             <!-- Arrow path (approximate coords) -->
-                            <path id="journeyPath" d="M820 350 L800 300 L160 230 L190 360" fill="none" stroke="var(--accent-color)" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="1200" stroke-dashoffset="1200">
+                            <path id="journeyPath" d="M820 350 L800 300 L160 230 L190 360" fill="none" stroke="var(--accent-color)" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="1200" stroke-dashoffset="1200">
                             </path>
                             <!-- Markers -->
                             <g class="marker" data-title="Columbia, SC" data-body="Home base. Journalism, photography roots. (–2021)" transform="translate(820,350)">
@@ -7332,7 +7334,7 @@
                     const length = path.getTotalLength();
                     path.style.strokeDasharray = String(length);
                     path.style.strokeDashoffset = String(length);
-                    setTimeout(() => { path.style.transition = 'stroke-dashoffset 2000ms ease'; path.style.strokeDashoffset = '0'; }, 300);
+                    setTimeout(() => { path.style.transition = 'stroke-dashoffset 1600ms ease'; path.style.strokeDashoffset = '0'; }, 300);
                 }
                 const markers = map.parentElement.querySelectorAll('.marker');
                 let tooltip = document.createElement('div');
