--- a/index.html
+++ b/index.html
@@ -5541,13 +5541,12 @@
                     <h3 class="mt-md mb-sm">Journey Across the Map</h3>
                     <div class="map-container" style="position: relative; background: #1a1a1a; border-radius: 16px; padding: 24px; border: 1px solid rgba(255,255,255,0.1);">
                         <!-- Canvas for interactive map -->
-                        <div id="interactiveMap" style="width: 100%; height: 400px; position: relative; background: #0f0f0f; border-radius: 12px; overflow: hidden;">
-                            <!-- US Map Background Image -->
-                            <!-- Add your US map image here by replacing 'Images/us-map.png' with your actual image path -->
-                            <img src="Images/us-map.png" alt="US Map" style="position: absolute; inset: 0; width: 100%; height: 100%; object-fit: contain; opacity: 0.3;" onerror="this.style.display='none'">
+                        <div id="interactiveMap" style="width: 100%; height: 450px; position: relative; background: #0f0f0f; border-radius: 12px; overflow: hidden;">
+                            <!-- Try US Map Background Image first -->
+                            <img src="Images/us-map.jpeg" alt="US Map" style="position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0.4; z-index: 1;" onerror="this.src='US Map Image.jpeg'">
                             
                             <!-- SVG Overlay for Journey -->
-                            <svg viewBox="0 0 959 593" style="width: 100%; height: 100%; position: absolute; inset: 0;">
+                            <svg viewBox="0 0 959 593" style="width: 100%; height: 100%; position: absolute; inset: 0; z-index: 2;">
                                 <defs>
                                     <!-- Glow effect -->
                                     <filter id="glow">
@@ -5627,7 +5626,7 @@
                             </svg>
                             
                             <!-- Hover Tooltip -->
-                            <div id="mapTooltip" style="position: absolute; background: rgba(0,0,0,0.95); border: 1px solid var(--accent-color); border-radius: 8px; padding: 12px 16px; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 1000; max-width: 250px; display: none;">
+                            <div id="mapTooltip" style="position: absolute; background: rgba(0,0,0,0.95); border: 1px solid var(--accent-color); border-radius: 8px; padding: 12px 16px; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 10; max-width: 250px; display: none;">
                                 <div style="font-weight: 600; color: var(--accent-color); margin-bottom: 4px;"></div>
                                 <div style="color: white; font-size: 14px; line-height: 1.4;"></div>
                             </div>
