--- a/index.html
+++ b/index.html
@@ -6995,17 +6995,10 @@
 
     <!-- Floating CTA -->
     <div class="floating-cta">
-        <button class="floating-cta-button" aria-label="Back to top" onclick="window.scrollTo({top:0, behavior:'smooth'})" title="Back to top">
+        <button id="backToTopButton" class="floating-cta-button" aria-label="Back to top" onclick="window.scrollTo({top:0, behavior:'smooth'})" title="Back to top" style="opacity:0; pointer-events:none; transition: opacity .3s ease;">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="19" x2="12" y2="5"></line><polyline points="5 12 12 5 19 12"></polyline></svg>
         </button>
-        <button class="floating-cta-button" aria-label="Contact Me" style="right: 0; position: absolute; transform: translateX(-70px);" title="Contact">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
-        </button>
-        <div class="floating-cta-content">
-            <h3>Let's Work Together</h3>
-            <p>Ready to start a project? Reach out and let's create something amazing.</p>
-            <a href="#contact" class="btn btn-primary">Get in Touch</a>
-        </div>
+        
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -7122,6 +7115,12 @@
                 if (header) {
                     if (window.scrollY > 50) header.classList.add('scrolled');
                     else header.classList.remove('scrolled');
+                }
+                // Toggle back-to-top visibility after scrolling a bit
+                const bt = document.getElementById('backToTopButton');
+                if (bt) {
+                    if (window.scrollY > 300) { bt.style.opacity = '1'; bt.style.pointerEvents = 'auto'; }
+                    else { bt.style.opacity = '0'; bt.style.pointerEvents = 'none'; }
                 }
                 if (scrollProgress) {
                     const scrollTotal = document.documentElement.scrollHeight - window.innerHeight;
