--- a/index.html
+++ b/index.html
@@ -6603,18 +6603,25 @@
                                     <h4>Emmys OOH Hijack — Awards Night Takeover</h4>
                                     <div class="section-divider"></div>
                                 </div>
-                                <p class="cs-paragraph">A real‑time out‑of‑home hijack during the Emmys, engineered to intercept cultural attention at peak moment. Built fast with a newsroom mindset: listen, concept, deploy — within hours. Creative aligned to DIRECTV’s streaming transformation narrative and sports leadership while tapping into awards‑night buzz.</p>
-                                <p class="cs-paragraph">I contributed to the connections strategy and real‑time orchestration — mapping high‑impact placements, coordinating projection timing, and aligning paid/organic social with our OOH creative. We also executed a Rotten Tomatoes homepage takeover to extend the moment digitally and drive curiosity off‑platform.</p>
-                                <p class="cs-paragraph">Rolled across print OOH, digital OOH, and social — with content captured and published in‑flight. The takeaway: meet the moment, move the conversation, and point to a product truth.</p>
+                                <p class="cs-paragraph">A real‑time Emmys takeover built around DIRECTV’s Universal Search tool. We placed DIRECTV’s search UI alongside award‑season IP — from Andor and Only Murders in the Building to The White Lotus, The Penguin and The Pitt — to make a simple point at a maximal moment: open DIRECTV, type what you want, and watch across partners without the hunt.</p>
+                                <p class="cs-paragraph">I led connections orchestration: mapping high‑impact sites and projection surfaces, sequencing flights directly after the Emmys broadcast, and aligning paid/organic social with our OOH creative. I authored briefs, coordinated rapid approvals, and synced Creative, PR and Media so every touchpoint reinforced the same product truth. We extended the stunt with a Rotten Tomatoes homepage takeover to capture curiosity and drive exploration.</p>
+                                <p class="cs-paragraph">The activation ran across Hollywood, West Hollywood, Santa Monica and Downtown LA in the days surrounding the show — celebrating winners while reminding people where to find the most talked‑about series. Channels spanned print OOH, digital OOH, projections and social; content was captured and published in‑flight.</p>
                             </div>
                             <div class="campaign-highlights cs-section">
                                 <div class="highlight-grid">
                                     <div class="highlight-card"><h5>Objective</h5><p>Culture hijack to boost consideration in real time</p></div>
                                     <div class="highlight-card"><h5>Timing</h5><p>Live during Emmys night and the following days</p></div>
-                                    <div class="highlight-card"><h5>Channels</h5><p>Print OOH, Digital OOH, Digital, Organic Social</p></div>
+                                    <div class="highlight-card"><h5>Channels</h5><p>Print OOH, Digital OOH, Projections, Organic Social</p></div>
+                                    <div class="highlight-card"><h5>Mechanic</h5><p>DIRECTV Universal Search + MyEntertainment Genre Pack</p></div>
+                                    <div class="highlight-card"><h5>Partners</h5><p>HBO/Max, Disney+, Hulu</p></div>
+                                    <div class="highlight-card"><h5>Coverage</h5><p>Hollywood, West Hollywood, Santa Monica, Downtown LA</p></div>
                                 </div>
                             </div>
                             <div class="photo-gallery-cs grid col-1 cs-section">
+                                <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" data-title="OOH — Universal Search Billboard" data-caption="Billboard creative pairing the DIRECTV search bar with award‑season IP.">
+                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" alt="DIRECTV Universal Search Billboard" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>OOH — Universal Search</h5><p>Billboard creative next to iconic titles.</p></div>
+                                </div>
                                 <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions.">
                                     <img src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" alt="DIRECTV Rotten Tomatoes Homepage Takeover" loading="lazy">
                                     <div class="photo-caption-cs"><h5>Digital — Rotten Tomatoes HPTO</h5><p>1.6M+ impressions and strong CTRs.</p></div>
@@ -6627,6 +6634,16 @@
                                     <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana.">
                                         <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
                                         <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
+                                    </div>
+                                </div>
+                                <div class="grid col-2" style="gap:16px;">
+                                    <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" data-title="Hollywood — Takeover Creative" data-caption="Post‑Emmys placements across Hollywood and West Hollywood.">
+                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" alt="DIRECTV Emmys OOH Creative 1" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Hollywood — Creative</h5><p>Post‑show placements across the city.</p></div>
+                                    </div>
+                                    <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" data-title="Downtown — Takeover Creative" data-caption="Downtown and Santa Monica placements extending the moment.">
+                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" alt="DIRECTV Emmys OOH Creative 2" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Downtown — Creative</h5><p>Downtown and Westside coverage.</p></div>
                                     </div>
                                 </div>
                                 <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night.">
