--- a/index.html
+++ b/index.html
@@ -6607,6 +6607,19 @@
                                 <p class="cs-paragraph">I led connections orchestration: mapping high‑impact sites and projection surfaces, sequencing flights directly after the Emmys broadcast, and aligning paid/organic social with our OOH creative. I authored briefs, coordinated rapid approvals, and synced Creative, PR and Media so every touchpoint reinforced the same product truth. We extended the stunt with a Rotten Tomatoes homepage takeover to capture curiosity and drive exploration.</p>
                                 <p class="cs-paragraph">The activation ran across Hollywood, West Hollywood, Santa Monica and Downtown LA in the days surrounding the show — celebrating winners while reminding people where to find the most talked‑about series. Channels spanned print OOH, digital OOH, projections and social; content was captured and published in‑flight.</p>
                             </div>
+
+                            <!-- Move video to the top and make larger -->
+                            <div class="video-gallery cs-section" style="max-width:1200px;margin:0 auto;">
+                                <div class="video-card">
+                                    <div class="video-container">
+                                        <video controls playsinline muted preload="metadata" style="width:100%;border-radius:12px;aspect-ratio:16/9;background:#000;">
+                                            <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV" type="video/quicktime">
+                                            <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV#t=0.1" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <div class="video-caption">Emmys OOH Hijack — Recap Reel</div>
+                                </div>
+                            </div>
                             <div class="campaign-highlights cs-section">
                                 <div class="highlight-grid">
                                     <div class="highlight-card"><h5>Objective</h5><p>Culture hijack to boost consideration in real time</p></div>
@@ -6617,50 +6630,32 @@
                                     <div class="highlight-card"><h5>Coverage</h5><p>Hollywood, West Hollywood, Santa Monica, Downtown LA</p></div>
                                 </div>
                             </div>
-                            <div class="photo-gallery-cs grid col-1 cs-section">
-                                <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" data-title="OOH — Universal Search Billboard" data-caption="Billboard creative pairing the DIRECTV search bar with award‑season IP.">
+                            <!-- Horizontal scrolling photo gallery with click-through -->
+                            <div class="photo-carousel cs-section" style="display:flex;gap:16px;overflow-x:auto;scroll-snap-type:x mandatory;padding:8px 4px 12px;scrollbar-width:none;">
+                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" data-title="OOH — Universal Search Billboard" data-caption="Billboard creative pairing the DIRECTV search bar with award‑season IP." style="min-width:360px;scroll-snap-align:start;">
                                     <img src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" alt="DIRECTV Universal Search Billboard" loading="lazy">
                                     <div class="photo-caption-cs"><h5>OOH — Universal Search</h5><p>Billboard creative next to iconic titles.</p></div>
-                                </div>
-                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions.">
+                                </a>
+                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions." style="min-width:360px;scroll-snap-align:start;">
                                     <img src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" alt="DIRECTV Rotten Tomatoes Homepage Takeover" loading="lazy">
                                     <div class="photo-caption-cs"><h5>Digital — Rotten Tomatoes HPTO</h5><p>1.6M+ impressions and strong CTRs.</p></div>
-                                </div>
-                                <div class="grid col-2" style="gap:16px;">
-                                    <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" data-title="Print OOH — Key Visual" data-caption="Melrose placement hero.">
-                                        <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg" alt="DIRECTV Emmys OOH Melrose Key Visual" loading="lazy">
-                                        <div class="photo-caption-cs"><h5>Print OOH — Key Visual</h5><p>Melrose placement during broadcast window.</p></div>
-                                    </div>
-                                    <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana.">
-                                        <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
-                                        <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
-                                    </div>
-                                </div>
-                                <div class="grid col-2" style="gap:16px;">
-                                    <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" data-title="Hollywood — Takeover Creative" data-caption="Post‑Emmys placements across Hollywood and West Hollywood.">
-                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" alt="DIRECTV Emmys OOH Creative 1" loading="lazy">
-                                        <div class="photo-caption-cs"><h5>Hollywood — Creative</h5><p>Post‑show placements across the city.</p></div>
-                                    </div>
-                                    <div class="photo-card-cs gallery-item" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" data-title="Downtown — Takeover Creative" data-caption="Downtown and Santa Monica placements extending the moment.">
-                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" alt="DIRECTV Emmys OOH Creative 2" loading="lazy">
-                                        <div class="photo-caption-cs"><h5>Downtown — Creative</h5><p>Downtown and Westside coverage.</p></div>
-                                    </div>
-                                </div>
-                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night.">
+                                </a>
+                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana." style="min-width:360px;scroll-snap-align:start;">
+                                    <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
+                                </a>
+                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" data-title="Hollywood — Takeover Creative" data-caption="Post‑Emmys placements across Hollywood and West Hollywood." style="min-width:360px;scroll-snap-align:start;">
+                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" alt="DIRECTV Emmys OOH Creative 1" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Hollywood — Creative</h5><p>Post‑show placements across the city.</p></div>
+                                </a>
+                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" data-title="Downtown — Takeover Creative" data-caption="Downtown and Santa Monica placements extending the moment." style="min-width:360px;scroll-snap-align:start;">
+                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" alt="DIRECTV Emmys OOH Creative 2" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Downtown — Creative</h5><p>Downtown and Westside coverage.</p></div>
+                                </a>
+                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night." style="min-width:360px;scroll-snap-align:start;">
                                     <img src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" alt="DIRECTV Emmys Projection" loading="lazy">
                                     <div class="photo-caption-cs"><h5>Digital OOH — Projection</h5><p>High‑scale moment capture.</p></div>
-                                </div>
-                            </div>
-                            <div class="video-gallery grid col-1 cs-section">
-                                <div class="video-card">
-                                    <div class="video-container">
-                                        <video controls playsinline muted preload="metadata" style="width:100%;border-radius:12px;" poster="Brand Imagery/Directv/OOH Hijack/LA-48_DIRECTV_9.16.2025-2.jpg">
-                                            <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV" type="video/quicktime">
-                                            <source src="Brand Imagery/Directv/OOH Hijack/DIRECTV Emmy's OOH Hijack.MOV#t=0.1" type="video/mp4">
-                                        </video>
-                                    </div>
-                                    <div class="video-caption">Emmys OOH Hijack — Recap Reel</div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
